          Menu system and comet zap work, fish cascade now works in fullscreen but cannot handle
          toggle of resolution in midstream; practice and lessons still need to be fixed to 
          handle new fullscreen mode.
        - Using GNU iconv() instead of Unicode Inc.'s conversion code
        - SDL_extras brought in from tuxmath for DrawButton(), streamlined BlackOutline(), etc.

18 Aug 2008 - svn revision 647
[ Sreyas Kurumanghat <k.sreyas@gmail.com ]
	- Added features to practice game. Now pressing the down arrow presents the next phrase for practice and the escape key quits from the game.

18 Aug 2008 - svn revision 646
[ Sreyas Kurumanghat <k.sreyas@gmail.com ]
	- Added pango support and rendering to practice game.

3 Aug 2008 - svn revision 599
[ Sreyas Kurumanghat <k.sreyas@gmail.com ]
	- Added keypress details for wrong key pressed in practice.

2008-07-09  gettextize  <bug-gnu-gettext@gnu.org>


3 Aug 2008 - svn revision 580
[ Sreyas Kurumanghat <k.sreyas@gmail.com ]
	- Added automatic keyboard layout generation in practice.c.
	- Modified the keyboard.lst file format. The current format can be any of the three below:
	- char
	- finger|char
	- finger|char|latin character
	- Features added so that the information about the keyboard gets updated each time the game is run.

13 Apr 2008 - svn revision 460
[ David Bruce <dbruce@tampabay.rr.com> ]
       - fixed small typo bug in alphabet.c (thanks Patrick Winnertz)

29 Mar 2008 - svn revision 451
[ David Bruce <dbruce@tampabay.rr.com> ]
       - new branch made called "tuxtype-new", code reorganized with
       - more standard subdirs "src", "data", "doc"; Makefile.am's
         and configure.ac updated accordingly.  After some tweaking,
         seems to work properly for configuration, "make", "make install",
         "make uninstall", "make distcheck" - and appears to run
         correctly on Linux.
       - version 1.5.17 to be released as last release from tree prior
         to reorganization.
